<resources>
    <string name="app_name">ToDo</string>
    <string name="enter_task_hint">Enter Task</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="ok_button_text">Ok</string>
    <string name="enter_passkey_hint">Enter Passkey</string>
    <string name="enter_username_hint">Enter Username</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button_text">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>