<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.LoginFragment">
    <data>
        <variable
            name="loginFragment"
            type="com.soham.todo.fragments.LoginFragment" />
    </data>

    <LinearLayout
        style="@style/main_background"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_username_hint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/password_field_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/login_button_text"
            android:onClick="@{(v)->loginFragment.loginUser(v)}"/>

    </LinearLayout>
</layout>